# thebook

./: .gitignore  Cargo.toml  README.md  build.rs  skills.md  thebook.idl
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: amm.rs  lib.rs  orderbook.rs  state.rs  types.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs  thebook_client.rs
docs/plans/: 2026-05-16-thebookdex-spec.md  2026-05-17-thebookdex-gtest.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/api/: prices.ts
frontend/src/: App.tsx  Providers.tsx  consts.ts  index.css  main.tsx
frontend/src/components/chart/: TradeChart.module.css  TradeChart.tsx
frontend/src/components/layout/: AnnouncementBar.module.css  AnnouncementBar.tsx  Drawer.module.css  Drawer.tsx  Header.module.css  Header.tsx  Layout.module.css  Layout.tsx  MobileNav.module.css  MobileNav.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/components/ui/: AccountSelector.module.css  AccountSelector.tsx  Card.module.css  Card.tsx  EmptyState.module.css  EmptyState.tsx  OnboardingWizard.module.css  OnboardingWizard.tsx  Skeleton.module.css  Skeleton.tsx  (+4 more)
frontend/src/hooks/: useOnboarding.ts  useOracle.ts  useOrderbook.ts  usePortfolio.ts  usePositions.ts  useSails.ts  useViewport.ts
frontend/src/lib/: errors.ts  helpers.ts  sails.ts
frontend/src/providers/: MarketDataProvider.tsx
frontend/src/styles/: responsive.css
frontend/src/types/: global.d.ts
frontend/src/views/: LeaderboardView.tsx  PoolsView.module.css  PoolsView.tsx  PortfolioView.module.css  PortfolioView.tsx  SwapView.module.css  SwapView.tsx  TradeView.module.css  TradeView.tsx
idl/: mention-listener.sh  van-announcement.json  van-identity-card.json
scripts/wallet-farm/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
scripts/wallet-farm/src/: farm.ts
src/: lib.rs
tests/: gtest.rs
