[package]
name = "thebook"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
thebook-app.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
thebook-app.workspace = true
thebook-client.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
thebook-app.workspace = true

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/thebook"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.4"
tokio = "1.48.0"
thebook-app = { version = "0.1.0", path = "app" }
thebook-client = { version = "0.1.0", path = "client" }
