[package]
name = "thebook-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing business logic for the program"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
gstd = "1.10.0"
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
